# TideMark

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PROJECT_STRUCTURE.md  README.md  release-please-config.json
.github/workflows/: ci.yml  release-from-tidemark.yml  release-please.yml  release.yml
docs/: CATEGORY_OWNERSHIP_AND_VALIDATION.md  CI_GATE_EXAMPLE.md  DELIVERY_REQUIREMENTS.md  DISTRIBUTION_AND_PLUGIN.md  ECOSYSTEM_RELEASE.md  TECHNICAL_DESIGN.md
examples/: 01-basic-mark.sh  02-file-and-tag.sh  03-remote-refresh.sh  04-trigger-release.md  05-trigger-ecosystem-release.md  README.md
packaging/apt/: README.md
packaging/homebrew/: tide.rb.in
packaging/npm/: README.md  package.json
packaging/npm/lib/: platform.js  runner.js
packaging/npm/scripts/: postinstall.js
packaging/pypi/: README.md  pyproject.toml
packaging/pypi/tidemark_agent/: __init__.py  cli.py  resolver.py
scripts/release/: build-apt-repo.sh  build-deb.sh  build-dist.sh  publish-apt.sh  render-homebrew-formula.sh  resolve-version.sh
src/: config.rs  error.rs  lib.rs
src/app/: mod.rs
src/core/: mod.rs  model.rs  release.rs  time.rs
src/core/resolver/: file.rs  mark.rs  mod.rs
src/infra/: cache.rs  mod.rs
src/infra/git/: cli.rs  mod.rs
src/interface/: cli.rs  mod.rs  output.rs
src/ops/: mod.rs  service.rs
tests/: determinism_regression.rs  file_integration.rs  mark_integration.rs  plugin_service_integration.rs  release_config_integration.rs  remote_refresh_integration.rs
tests/common/: mod.rs
