# TideMark
# ========
#
# File: Cargo.toml
# Description: Cargo package manifest for TideMark binaries, dependencies, and Debian metadata.
#
# Responsibility:
# - Declare build targets, crate metadata, and package configuration.
#
# Architectural Position:
# - Rust project manifest boundary for build and packaging toolchains.
#
# Author: Silan.Hu
# Email: silan.hu@u.nus.edu
# Copyright (c) 2026-2027 easynet. All rights reserved.

[package]
name = "tidemark"
version = "0.1.0"
edition = "2024"
autobins = false
description = "Git-native deterministic version coordinate system"
license = "MIT"

[[bin]]
name = "tide"
path = "src/bin/tide.rs"

[[bin]]
name = "git-tide"
path = "src/bin/git-tide.rs"

[dependencies]
chrono = { version = "0.4.40", features = ["clock"] }
clap = { version = "4.5.31", features = ["derive"] }
hex = "0.4.3"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sha2 = "0.10.8"
thiserror = "2.0.11"
toml = "0.8.20"

[dev-dependencies]
assert_cmd = "2.0.16"
tempfile = "3.17.1"

[package.metadata.deb]
name = "tidemark"
maintainer = "TideMark Maintainers"
copyright = "2026, TideMark"
license-file = ["LICENSE", "4"]
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/tide", "usr/bin/tide", "755"],
    ["target/release/git-tide", "usr/bin/git-tide", "755"],
]
